--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">takada-kenshi-no-densetsu-android</string>
+    <string name="app_name">高田健志伝説集め</string>
 </resources>
